--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_t
 Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
 </p>
 </td></tr></table>
-<p><b>Research</b>: Machine learning, optimal transport. <br />
+<p>Research: Machine learning, optimal transport. <br />
 </p>
 <p>I have been working on theory, methodology, and application of learning with large-scale, complex data and models from mathematical perspectives. More concretely, my recent research includes:
 </p>
@@ -44,7 +44,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <li><p><b>Methodology</b>: Scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
 </p>
 </li>
-<li><p><b>Application</b>: for large-scale, complex structure data, including non-Euclidean, high-dimension, nonlinearity, corruption. 
+<li><p><b>Application</b>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, nonlinearity, corruption. 
 </p>
 </li>
 </ul>
@@ -150,7 +150,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 15:42:13 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 15:48:08 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
