--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <p>I have been working on theory, methodology, and application of learning with large-scale, complex data and models from mathematical perspectives. More concretely, my recent research includes:
 </p>
 <ul>
-<li><p><b>Theory</b>: optimal transport theory for measures with graph structure, for variants with functional geometric structure.
+<li><p><b>Theory</b>: optimal transport theory for measures with graph structure, for variational problems with functional geometric structure.
 </p>
 </li>
 <li><p><b>Methodology</b>: scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
@@ -150,7 +150,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 15:55:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-06 16:35:07 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
