--- a/code.html
+++ b/code.html
@@ -21,6 +21,57 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
+<li><p><a href="https://github.com/lttam/sava" target=&ldquo;blank&rdquo;>SAVA: Scalable Data Valuation</a>. (ICLR 2025)
+</p>
+<ul>
+<li><p>A scalable data valuation (agnostic-model) by leveraging optimal transport on batches.
+</p>
+</li>
+<li><p>The proposed method can be applied for scoring each data point in a large training dataset (e.g., millions of data points, and more)
+</p>
+</li>
+<li><p>Implemented by Samuel Kessler.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p><a href="https://github.com/lttam/STSW" target=&ldquo;blank&rdquo;>Spherical Tree-Sliced-Wasserstein (STSW)</a>. (ICLR 2025)
+</p>
+<ul>
+<li><p>Invariant TSW on system of lines (TSW-SL) for measures supported on a hyper-sphere. 
+</p>
+</li>
+<li><p>It can also be applied for applications with dynamic-support measures including deep generative model, gradient flow.
+</p>
+</li>
+<li><p>Mainly implemented by Thanh Chu.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p><a href="https://github.com/lttam/DbTSW" target=&ldquo;blank&rdquo;>Distance-based Tree-Sliced-Wasserstein (DbTSW)</a>. (ICLR 2025)
+</p>
+<ul>
+<li><p>Invariant TSW on system of lines (TSW-SL) where we address key challenges in TSW (NeurIPS 2019). 
+</p>
+</li>
+<li><p>It paves a way to apply TSW for applications with dynamic-support measures including diffusion model, gradient flow.
+</p>
+</li>
+<li><p>Mainly implemented by Khoi Nguyen.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p><a href="https://github.com/lttam/Generalized-Sobolev-Transport" target=&ldquo;blank&rdquo;>Generalized Sobolev Transport (GST)</a>. (ICML 2024)
 </p>
 <ul>
@@ -254,7 +305,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 16:38:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-23 12:09:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
