--- a/professional.html
+++ b/professional.html
@@ -21,18 +21,62 @@
 <h1>Tam Le - Professional Activities</h1>
 </div>
 <h2>Professional Services</h2>
-<p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
+<p><b> Selected ML Conferences / Journals</b>
 </p>
 <ul>
-<li><p>AC, International Conference on Machine Learning (<b>ICML</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>International Conference on Machine Learning (<b>ICML</b>)
+</p>
+<ul>
+<li><p><b>Area chair (AC)</b>: <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025
 </p>
 </li>
-<li><p>AC, International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Program committee (PC): 2015, 2019-2023
+</p>
+</li></ul>
+</li>
+<li><p>International Conference on Learning Representations (<b>ICLR</b>)
+</p>
+<ul>
+<li><p><b>Area chair (AC)</b>: <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025
 </p>
 </li>
-<li><p>AC, International Conference on Learning Representations (<b>ICLR</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Program committee (PC): 2020-2023
+</p>
+</li></ul>
+</li>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>)
+</p>
+<ul>
+<li><p><b>Area chair (AC)</b>: <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025
 </p>
 </li>
+<li><p>Program committee (PC): 2020-2023
+</p>
+</li></ul>
+</li>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>)
+</p>
+<ul>
+<li><p>Program committee (PC): 2015, 2019-2025
+</p>
+</li></ul>
+</li>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>)
+</p>
+<ul>
+<li><p>Reviewer: 2020-2021, 2023
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<p><b>Area Chair (Meta-Reviewer) / Senior Program Committee</b> 
+
+
+
+</p>
+<ul>
 <li><p>SPC, AAAI Conference on Artificial Intelligence (AAAI): 2025
 </p>
 </li>
@@ -47,23 +91,13 @@
 </li>
 </ul>
 <p><b>Program Committee / Journal Reviewer</b>
+
+
+
+
+
 </p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2019-2023
-</p>
-</li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019-2024
-</p>
-</li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2020-2023
-</p>
-</li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2023
-</p>
-</li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>): 2020-2021, 2023
-</p>
-</li>
 <li><p>Machine Learning Journal (MLJ): 2017-2019
 </p>
 </li>
@@ -174,10 +208,10 @@
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2024.
 </p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2024.
+<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022, 2025.
 </p>
 </li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022.
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2024.
 </p>
 </li>
 <li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.
@@ -232,7 +266,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 16:38:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-23 12:09:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
