--- a/index.html
+++ b/index.html
@@ -33,18 +33,17 @@ Visiting Scientist, <a href="https://www.riken.jp/en/research/labs/aip/generic_t
 Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>. <br />
 </p>
 </td></tr></table>
-<p>Research: machine learning, optimal transport. <br />
-</p>
+<h2>Research: Machine Learning, Optimal Transport <br /></h2>
 <p>I have been working on theory, methodology, and application of learning with large-scale, complex data and models from mathematical perspectives. More concretely, my recent research includes:
 </p>
 <ul>
-<li><p><b>Theory</b>: optimal transport theory for measures with graph structure, for variational Wasserstein problems.
+<li><p><b>Theory</b>: optimal transport theory for measures with graph structure, with functional geometric structure; and for variational Wasserstein problems.
 </p>
 </li>
-<li><p><b>Methodology</b>: scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
+<li><p><b>Methodology</b>: scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative model, diffusion model, data valuation for LLM pretraining.
 </p>
 </li>
-<li><p><b>Application</b>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, nonlinearity, corruption. 
+<li><p><b>Application</b>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption. 
 </p>
 </li>
 </ul>
@@ -113,6 +112,21 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li>
 </ul>
+<h2>Vita</h2>
+<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and later as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, mentored by <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
+</p>
+<h2>Selected Service</h2>
+<ul>
+<li><p>Area chair: ICML, ICLR, AISTATS
+</p>
+</li>
+<li><p>Program committee: NeurIPS
+</p>
+</li>
+<li><p>Reviewer: JMLR
+</p>
+</li>
+</ul>
 <h2>Research Support</h2>
 <p><b>Grants</b>
 </p>
@@ -134,23 +148,16 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li>
 <li><p>04/2023 - 03/2026, a collaborator in a research group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. 
-</p>
-</li>
-<li><p>04/2024 - 03/2025, ISM Joint-research 2024-ISMCRP-2021 as PI.
-</p>
-</li>
-<li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
+
+
 </p>
 </li>
 </ul>
-<h2>Vita</h2>
-<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and later as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, mentored by <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
-</p>
 <p><br /><br />
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-06 16:38:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-23 12:09:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
