--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>25-Mar-2025, Our paper, entitled <a href="https://arxiv.org/pdf/2308.15005" target=&ldquo;blank&rdquo;>&ldquo;Few-Shot Object Detection via Synthetic Features with Optimal Transport&rdquo;</a> has been accepted to Computer Vision and Image Understanding (<b>CVIU</b>) journal! This is joint work with Khoa Nguyen, Toan Do, Tiep Nguyen, Triet Tran, and Tam V. Nguyen.
+</p>
+</li>
 <li><p>23-Jan-2025, Our 3 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
 </p>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2406.01130v1" target=&ldquo;blank&rdquo;>SAVA: Scalable Learning-Agnostic Data Valuation</a>, joint work with Samuel Kessler, and Vu Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=0UCoWxPhQ4" target=&ldquo;blank&rdquo;>SAVA: Scalable Learning-Agnostic Data Valuation</a>, joint work with Samuel Kessler, and Vu Nguyen.
 </p>
 </li>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Distance-Based Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Khoi Nguyen, Trang Pham, Thanh Chu, and Tan Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;>Distance-Based Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Khoi Nguyen, Trang Pham, Thanh Chu, and Tan Nguyen.
 </p>
 </li>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Spherical Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Thanh Chu, Khoi Nguyen, Trang Pham, and Tan Nguyen.
+<li><p><a href="https://openreview.net/pdf?id=FPQzXME9NK" target=&ldquo;blank&rdquo;>Spherical Tree-Sliced Wasserstein Distance</a>, joint work with Hoang Tran, Thanh Chu, Khoi Nguyen, Trang Pham, and Tan Nguyen.
 </p>
 </li></ul>
 </li>
@@ -157,7 +160,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-23 18:16:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-30 01:32:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
