--- a/professional.html
+++ b/professional.html
@@ -136,6 +136,36 @@
 </p>
 </li>
 </ul>
+<h2>Research Support</h2>
+<p><b>Grants</b>
+</p>
+<ul>
+<li><p>04/2023 - 03/2026, <a href="https://www.jsps.go.jp/english/e-grants/" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 23K11243</a>, Grants-in-Aid for Scientific Research (C) as PI (4.8M JPY). 
+</p>
+</li>
+<li><p>04/2020 - 03/2023, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 20K19873</a>, Grants-in-Aid for Young Scientists as PI (4.2M JPY). 
+</p>
+</li>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K12745</a>, Grants-in-Aid for Young Scientists (B) as PI (4.1M JPY). 
+</p>
+</li>
+</ul>
+<p><b>Others</b>
+</p>
+<ul>
+<li><p>06/2022 - 03/2027, a collaborator in Data Science group led by <a href="https://www.ism.ac.jp/~fukumizu/" target=&ldquo;blank&rdquo;>Kenji Fukumizu</a> (ISM), JSPS - Grant-in-Aid for Transformative Research Areas (A). 
+</p>
+</li>
+<li><p>04/2023 - 03/2026, a collaborator in a research group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. 
+</p>
+</li>
+<li><p>04/2024 - 03/2025, ISM Joint-research 2024-ISMCRP-2021 as PI.
+</p>
+</li>
+<li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
+</p>
+</li>
+</ul>
 <h2>Visitors / ISM Joint-Research</h2>
 <ul>
 <li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023).
@@ -266,7 +296,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-30 01:32:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-03-30 10:41:27 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
