--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <h2>News</h2>
 <ul>
+<li><p>01-May-2025, Our 3 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;25</b></a>.
+</p>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance: A Geometric Perspective</a>, joint work with Hoang Tran, Trang Pham, Tho Tran, Khoi Nguyen, Thanh Chu, and Tan Nguyen.
+</p>
+</li>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Hoang Tran, Thanh Chu, Trang Pham, Laurent Ghaoui, and Tan Nguyen.
+</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;>Scalable Sobolev IPM for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
+</p>
+</li></ul>
+</li>
 <li><p>25-Mar-2025, Our paper, entitled <a href="https://arxiv.org/pdf/2308.15005" target=&ldquo;blank&rdquo;>&ldquo;Few-Shot Object Detection via Synthetic Features with Optimal Transport&rdquo;</a> has been accepted to Computer Vision and Image Understanding (<b>CVIU</b>) journal! This is joint work with Khoa Nguyen, Toan Do, Tiep Nguyen, Triet Tran, and Tam V. Nguyen.
 </p>
 </li>
@@ -128,7 +141,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-30 10:43:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-01 21:48:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
