--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,27 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
+International Conference on Machine Learning (<b>ICML</b>), 2025. <br /> 
+Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi Nguyen, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
+International Conference on Machine Learning (<b>ICML</b>), 2025. <br /> 
+Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>  <br /> 
+International Conference on Machine Learning (<b>ICML</b>), 2025. <br />
+<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://openreview.net/pdf?id=OiQttMHwce" target=&ldquo;blank&rdquo;><font color="blue">Distance-Based Tree-Sliced Wasserstein Distance</font></a>  <br /> 
 International Conference on Learning Representation (<b>ICLR</b>), 2025. (<i>Acceptance rate: 32.08% out of about 11500 submissions</i>) <br />
 Hoang V. Tran<font color="red">*</font>, Khoi Nguyen<font color="red">*</font>, Trang Pham, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
@@ -157,30 +178,9 @@ Anh Khoa Nguyen Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet T
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
-Under review, 2025. <br /> 
-Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
-</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/pdf/2502.00739" target=&ldquo;blank&rdquo;><font color="blue">Orlicz-Sobolev Transport for Unbalanced Measures on a Graph</font></a>  <br /> 
 ArXiv, 2025. <br />
 <b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;><font color="blue">Scalable Sobolev IPM for Probability Measures on a Graph</font></a>  <br /> 
-ArXiv, 2025. <br />
-<b>Tam Le</b><font color="red">*</font>, Truyen Nguyen<font color="red">*</font>, Hideitsu Hino, Kenji Fukumizu.
-</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance on a System of Lines</font></a>  <br /> 
-ArXiv, 2024. <br /> 
-Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran,  <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
@@ -374,7 +374,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-03-30 10:43:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-01 21:48:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
