--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance: A Geometric Perspective</a>, joint work with Hoang Tran, Trang Pham, Tho Tran, Khoi Nguyen, Thanh Chu, and Tan Nguyen.
 </p>
 </li>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Hoang Tran, Thanh Chu, Trang Pham, Laurent Ghaoui, and Tan Nguyen.
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Hoang Tran, Thanh Chu, Trang Pham, Laurent El Ghaoui, and Tan Nguyen.
 </p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;>Scalable Sobolev IPM for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
@@ -141,7 +141,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-01 21:48:21 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-02 10:19:40 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
