--- a/publication.html
+++ b/publication.html
@@ -171,6 +171,20 @@ Machine Learning Journal (<b>MLJ</b>), 2014. <br />
 <p><b>Other Journals / Conference papers / Preprints</b>
 </p>
 <ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Entropy Partial Transport</font></a>  <br /> 
+Under review. <br /> 
+Hoang V. Tran, Thanh Tran, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Revisiting Tree-Sliced Wasserstein Distance Through the Lens of the Fermat–Weber Problem</font></a>  <br /> 
+Under review. <br /> 
+Hoang V. Tran, Thanh Chu, Thanh Tran, Khang Tran, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
+</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2308.15005.pdf" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 Computer Vision and Image Understanding (<b>CVIU</b>) journal, 2025. <br />
 Anh Khoa Nguyen Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet Tran, Tam V. Nguyen
@@ -374,7 +388,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-02 11:56:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-19 21:11:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
