--- a/professional.html
+++ b/professional.html
@@ -64,7 +64,8 @@
 <li><p>Journal of Machine Learning Research (<b>JMLR</b>)
 </p>
 <ul>
-<li><p>Reviewer: 2020-2021, 2023
+<li><p><a href="https://www.jmlr.org/editorial-board.html" target=&ldquo;blank&rdquo;>Editorial board of reviewer</a>
+
 </p>
 </li>
 </ul>
@@ -296,7 +297,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-19 21:11:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-30 21:32:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
