--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>I have been working on theory, methodology, and application of learning with large-scale, complex data and models from mathematical perspectives. More concretely, my research focus is as follows:
+<p>I have been working on learning with large-scale, complex data and models from mathematical perspectives. More concretely, my research focus is structured across three levels:
 </p>
 <ul>
-<li><p><b>Theory</b>: optimal transport theory for measures with graph structure, with functional geometric structure; and for variational Wasserstein problems.
+<li><p>Theory: optimal transport theory for measures with graph structure, tree systems, functional geometric structure; and for variational Wasserstein problems.
 </p>
 </li>
-<li><p><b>Methodology</b>: scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
+<li><p>Methodology: scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
 </p>
 </li>
-<li><p><b>Application</b>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption. 
+<li><p>Application: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption. 
 </p>
 </li>
 </ul>
-<p>I would love to expand my research spectrum to more interesting and impactful (related) research problems.
+<p>Moreover, I actively expand the research spectrum to interesting and impactful (related) research problems.
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -123,7 +123,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </li>
 </ul>
 <h2>Vita</h2>
-<p>I received my Ph.D in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and later as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, with <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>, and I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
+<p>I received the Ph.D degree in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, with <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>. I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
 </p>
 <h2>Selected Service</h2>
 <ul>
@@ -141,7 +141,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-30 21:32:06 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-05-30 22:04:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
