--- a/code.html
+++ b/code.html
@@ -21,6 +21,17 @@
 <h1>Tam Le - Code &amp; Datasets</h1>
 </div>
 <ul>
+<li><p><a href="https://github.com/lttam/Sobolev-IPM" target=&ldquo;blank&rdquo;>Scalable Sobolev IPM</a>. (ICML 2025)
+</p>
+<ul>
+<li><p>A scalable regularized Sobolev IPM for probability measures supported on a graph metric space. Notice that there is no efficient algorithmic approach to compute Sobolev IPM effectively yet to our knowledge. Therefore, the proposed approach paves a way to apply Sobolev IPM for practical applications, especially for large-scale setting.
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p><a href="https://github.com/lttam/sava" target=&ldquo;blank&rdquo;>SAVA: Scalable Data Valuation</a>. (ICLR 2025)
 </p>
 <ul>
@@ -305,7 +316,7 @@
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-30 22:04:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-04 21:02:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
