--- a/index.html
+++ b/index.html
@@ -34,20 +34,30 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>I have been working on learning with large-scale, complex data and models from mathematical perspectives. More concretely, my research focus is structured across three levels:
+<p>My research goals are to make AI more advanced with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives. More specifically, my research focus is to enhance theoretical foundations for data science from <i>optimal transport (OT) theory</i> perspective, with two objectives as follows:
 </p>
 <ul>
-<li><p>Theory: optimal transport theory for measures with graph structure, tree systems, functional geometric structure; and for variational Wasserstein problems.
+<li><p>(i) <i>Deepening OT theory</i>: breaking the curse of dimensionality for OT with 1D-structure by exploiting graph structure, and tree system; and going beyond Lp structure for variational Wasserstein problems by utilizing functional geometric structure.
 </p>
 </li>
-<li><p>Methodology: scalability, robustness, and efficiency of optimal transport for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
-</p>
-</li>
-<li><p>Application: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption. 
+<li><p>(ii) <i>Leveraging OT theoretical insights for data science</i>: designing innovative efficient methodologies; and improving efficiency, scalability, robustness for applications with large-scale, complex data.
 </p>
 </li>
 </ul>
-<p>Moreover, I actively expand the research spectrum to interesting and impactful (related) research problems.
+<p>My research is structured across three levels:
+</p>
+<ul>
+<li><p><i>Theory</i>: OT theory for measures with graph structure, tree systems, functional geometric structure; and for variational Wasserstein problems.
+</p>
+</li>
+<li><p><i>Methodology</i>: scalability, robustness, and efficiency of OT for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
+</p>
+</li>
+<li><p><i>Application</i>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption. 
+</p>
+</li>
+</ul>
+<p>Furthermore, I actively expand the research spectrum to interesting and impactful (related) research problems.
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -97,19 +107,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li>
 <li><p>07-Aug-2024, I will serve as Area Chair for <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>, and as Senior Program Committee for <a href="https://aaai.org/conference/aaai/aaai-25/" target=&ldquo;blank&rdquo;><i>AAAI&rsquo;25</i></a>.
-</p>
-</li>
-<li><p>02-May-2024, Our 2 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;24</b></a>.
-</p>
-<ul>
-<li><p><a href="https://arxiv.org/pdf/2401.15889" target=&ldquo;blank&rdquo;>Sliced Wasserstein with Random-Path Projecting Directions</a>, joint work with Khai Nguyen, Shujian Zhang, and Nhat Ho.
-</p>
-</li>
-<li><p><a href="https://arxiv.org/pdf/2402.04516" target=&ldquo;blank&rdquo;>Generalized Sobolev Transport for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, and Kenji Fukumizu.
-</p>
-</li></ul>
-</li>
-<li><p>20-Jan-2024, Our paper, entitled <a href="https://arxiv.org/pdf/2310.13653.pdf" target=&ldquo;blank&rdquo;>&ldquo;Optimal Transport for Measures with Noisy Tree Metric&rdquo;</a> has been accepted to <a href="http://aistats.org/aistats2024/" target=&ldquo;blank&rdquo;><b>AISTATS&rsquo;24</b></a>! This is joint work with Truyen Nguyen and Kenji Fukumizu.  
+
+
+
+
 
 
 
@@ -141,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-30 22:04:49 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-04 21:02:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
