--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>My research goals are to make AI more advanced with a focus on improving its scalability, efficiency, and robustness for learning with large-scale, complex data and models from mathematical perspectives. More specifically, my research focus is to enhance theoretical foundations for data science from <i>optimal transport (OT) theory</i> perspective, with two objectives as follows:
+<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) perspective, focusing on two objectives as follows:
 </p>
 <ul>
-<li><p>(i) <i>Deepening OT theory</i>: breaking the curse of dimensionality for OT with 1D-structure by exploiting graph structure, and tree system; and going beyond Lp structure for variational Wasserstein problems by utilizing functional geometric structure.
+<li><p>(i) <i>Deepening OT theory</i>: break the curse of dimensionality for OT with 1D-structure; and going beyond Lp structure for variational Wasserstein problems.
 </p>
 </li>
-<li><p>(ii) <i>Leveraging OT theoretical insights for data science</i>: designing innovative efficient methodologies; and improving efficiency, scalability, robustness for applications with large-scale, complex data.
+<li><p>(ii) <i>Leveraging OT theoretical insights for data science</i>: designing innovative efficient methodologies; and improving efficiency, scalability, and robustness for applications with large-scale, complex data.
 </p>
 </li>
 </ul>
 <p>My research is structured across three levels:
 </p>
 <ul>
-<li><p><i>Theory</i>: OT theory for measures with graph structure, tree systems, functional geometric structure; and for variational Wasserstein problems.
+<li><p><i>Theory</i>: OT theory for measures with graph structure, tree systems, functional geometric structure.
 </p>
 </li>
-<li><p><i>Methodology</i>: scalability, robustness, and efficiency of OT for learning with measures in machine learning and deep learning, including deep generative models, diffusion models, data valuation for LLM pretraining.
+<li><p><i>Methodology</i>: scalability, robustness, and efficient of OT for learning with measures in machine learning and deep learning, e.g., generative models, diffusion models, data valuation for LLM pretraining.
 </p>
 </li>
-<li><p><i>Application</i>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption. 
+<li><p><i>Application</i>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption.
 </p>
 </li>
 </ul>
@@ -142,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-04 21:02:35 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-04 21:52:09 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
