--- a/professional.html
+++ b/professional.html
@@ -27,37 +27,37 @@
 <li><p>International Conference on Machine Learning (<b>ICML</b>)
 </p>
 <ul>
-<li><p><b>Area chair (AC)</b>: <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Area chair (<b>AC</b>): <a href="https://icml.cc/Conferences/2024/Reviewers" target=&ldquo;blank&rdquo;>2024</a>-2025
 </p>
 </li>
-<li><p>Program committee (PC): 2015, 2019-2023
+<li><p>Program committee: 2015, 2019-2023
 </p>
 </li></ul>
 </li>
 <li><p>International Conference on Learning Representations (<b>ICLR</b>)
 </p>
 <ul>
-<li><p><b>Area chair (AC)</b>: <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Area chair (<b>AC</b>): <a href="https://iclr.cc/Conferences/2024/ProgramCommittee" target=&ldquo;blank&rdquo;>2024</a>-2025
 </p>
 </li>
-<li><p>Program committee (PC): 2020-2023
+<li><p>Program committee: 2020-2023
 </p>
 </li></ul>
 </li>
 <li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>)
 </p>
 <ul>
-<li><p><b>Area chair (AC)</b>: <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025
+<li><p>Area chair (<b>AC</b>): <a href="https://virtual.aistats.org/Conferences/2024/AreaChairs" target=&ldquo;blank&rdquo;>2024</a>-2025
 </p>
 </li>
-<li><p>Program committee (PC): 2020-2023
+<li><p>Program committee: 2020-2023
 </p>
 </li></ul>
 </li>
 <li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>)
 </p>
 <ul>
-<li><p>Program committee (PC): 2015, 2019-2025
+<li><p>Program committee: 2015, 2019-2025
 </p>
 </li></ul>
 </li>
@@ -297,7 +297,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-04 21:52:09 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-04 21:53:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
