--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) perspective, focusing on two objectives as follows:
+<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspective, focusing on two following objectives:
 </p>
 <ul>
 <li><p>(i) <i>Deepening OT theory</i>: break the curse of dimensionality for OT with 1D-structure; and going beyond Lp structure for variational Wasserstein problems.
@@ -142,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-04 21:53:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-04 21:55:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
