--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 <li><p>01-May-2025, Our 3 papers have been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;><b>ICML&rsquo;25</b></a>.
 </p>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance: A Geometric Perspective</a>, joint work with Hoang Tran, Trang Pham, Tho Tran, Khoi Nguyen, Thanh Chu, and Tan Nguyen.
+<li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance: A Geometric Perspective</a>, joint work with Hoang Tran, Trang Pham, Tho Tran, Khoi Nguyen, Thanh Chu, and Tan Nguyen.
 </p>
 </li>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Hoang Tran, Thanh Chu, Trang Pham, Laurent El Ghaoui, and Tan Nguyen.
+<li><p><a href="https://arxiv.org/pdf/2505.00968" target=&ldquo;blank&rdquo;>Tree-Sliced Wasserstein Distance with Nonlinear Projection</a>, joint work with Thanh Tran, Hoang Tran, Thanh Chu, Trang Pham, Laurent El Ghaoui, and Tan Nguyen.
 </p>
 </li>
 <li><p><a href="https://arxiv.org/pdf/2502.00737" target=&ldquo;blank&rdquo;>Scalable Sobolev IPM for Probability Measures on a Graph</a>, joint work with Truyen Nguyen, Hideitsu Hino, and Kenji Fukumizu.
@@ -142,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-04 21:55:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-10 17:34:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
