--- a/publication.html
+++ b/publication.html
@@ -24,14 +24,14 @@
 </p>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2406.13725" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance: A Geometric Perspective</font></a>  <br /> 
 International Conference on Machine Learning (<b>ICML</b>), 2025. (<i>Acceptance rate: 3260/12107</i>) <br /> 
 Hoang V. Tran<font color="red">*</font>, Trang Pham<font color="red">*</font>, Tho Tran, Khoi Nguyen, Thanh Chu, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
 </li>
 </ul>
 <ul>
-<li><p><a href="to-be-updated" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
+<li><p><a href="https://arxiv.org/pdf/2505.00968" target=&ldquo;blank&rdquo;><font color="blue">Tree-Sliced Wasserstein Distance with Nonlinear Projection</font></a>  <br /> 
 International Conference on Machine Learning (<b>ICML</b>), 2025. (<i>Acceptance rate: 3260/12107</i>) <br /> 
 Thanh Tran<font color="red">*</font>, Hoang V. Tran<font color="red">*</font>, Thanh Chu, Trang Pham, Laurent El Ghaoui<font color="green">&oast;</font>, <b>Tam Le</b><font color="green">&oast;</font>, Tan M. Nguyen<font color="green">&oast;</font>.
 </p>
@@ -388,7 +388,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-04 21:55:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-10 17:34:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
